--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "mobx-react-lite": "^2.2.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-fast-image": "^8.3.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.0",
+    "react-native-redash": "14.2.4",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
     "react-native-size-matters": "^0.3.1",
+    "react-native-vector-icons": "^7.1.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
