--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "target": "esnext",
     "baseUrl": "./",
     "paths": {
-      "_/*": ["src", "src/*"]
+      "_/*": ["src", "src/*"],
+      "assets/*": ["assets", "assets/*"]
     }
   },
   "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
