--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@types/react-native-vector-icons": "^6.4.5",
+    "axios": "^0.20.0",
     "mobx": "^5.15.6",
     "mobx-react-lite": "^2.2.1",
     "react": "16.13.1",
@@ -24,6 +27,7 @@
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
     "react-native-size-matters": "^0.3.1",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.1.0",
     "styled-components": "^5.2.0"
   },
